src/syntax/jparser.output
   0  $accept : %entry% $end

   1  file : modifier_list_star file_type class_name extends_clause implements_clause file_body

   2  spec_file : EOF
   3            | IMPORT STRING_CONSTANT SEMICOLON spec_file
   4            | classspec spec_file

   5  classspec : file_type class_name L_BRACE apf_defines methods_specs R_BRACE

   6  apf_defines : apf_define apf_defines
   7              |

   8  eq_as : EQUALS
   9        | AS

  10  apf_define : EXPORT identifier L_PAREN lvariable paramlist_question_mark R_PAREN eq_as formula SEMICOLON
  11             | DEFINE identifier L_PAREN lvariable paramlist_question_mark R_PAREN eq_as formula SEMICOLON

  12  methods_specs : method_spec methods_specs
  13                |

  14  spec : L_BRACE formula R_BRACE L_BRACE formula R_BRACE exp_posts

  15  specs : spec ANDALSO specs
  16        | spec

  17  method_spec : method_signature_short COLON specs SEMICOLON
  18              | STATIC method_signature_short COLON specs SEMICOLON
  19              | method_signature_short COLON specs
  20              | STATIC method_signature_short COLON specs

  21  exp_posts : L_BRACE identifier COLON formula R_BRACE exp_posts
  22            |

  23  modifier : ABSTRACT
  24           | FINAL
  25           | NATIVE
  26           | PUBLIC
  27           | PROTECTED
  28           | PRIVATE
  29           | STATIC
  30           | SYNCHRONIZED
  31           | TRANSIENT
  32           | VOLATILE
  33           | STRICTFP
  34           | ENUM
  35           | ANNOTATION

  36  file_type : CLASS
  37            | INTERFACE

  38  extends_clause : EXTENDS class_name
  39                 |

  40  implements_clause : IMPLEMENTS class_name_list
  41                    |

  42  file_body : L_BRACE member_list_star R_BRACE

  43  class_name_list : class_name
  44                  | class_name COMMA class_name_list

  45  modifier_list_star :
  46                     | modifier modifier_list_star

  47  member_list_star :
  48                   | member member_list_star

  49  member : modifier_list_star jtype name SEMICOLON
  50         | modifier_list_star jtype name L_PAREN parameter_list_question_mark R_PAREN throws_clause requires_clause old_clauses ensures_clause method_body

  51  jtype : VOID
  52        | nonvoid_type

  53  parameter_list : parameter
  54                 | parameter COMMA parameter_list

  55  parameter_list_args_opt : parameter_args_opt
  56                          | parameter_args_opt COMMA parameter_list_args_opt

  57  parameter : nonvoid_type

  58  parameter_args_opt : nonvoid_type
  59                     | nonvoid_type identifier

  60  throws_clause : THROWS class_name_list
  61                |

  62  requires_clause : REQUIRES method_body
  63                  |

  64  old_clauses : old_clause old_clauses
  65              |

  66  old_clause : OLD method_body

  67  ensures_clause : ENSURES method_body
  68                 |

  69  base_type_no_name : BOOLEAN
  70                    | BYTE
  71                    | CHAR
  72                    | SHORT
  73                    | INT
  74                    | LONG
  75                    | FLOAT
  76                    | DOUBLE
  77                    | NULL

  78  base_type : base_type_no_name
  79            | class_name

  80  integer_constant : INTEGER_CONSTANT

  81  integer_constant_long : INTEGER_CONSTANT_LONG

  82  float_constant : FLOAT_CONSTANT

  83  string_constant : STRING_CONSTANT

  84  quoted_name : QUOTED_NAME

  85  identifier : AS
  86             | IDENTIFIER
  87             | FALSE
  88             | TRUE
  89             | GARBAGE

  90  at_identifier : AT_IDENTIFIER

  91  full_identifier : FULL_IDENTIFIER

  92  nonvoid_type : base_type_no_name array_brackets_list_star
  93               | quoted_name array_brackets_list_star
  94               | identifier array_brackets_list_star
  95               | full_identifier array_brackets_list_star

  96  array_brackets_list_star :
  97                           | L_BRACKET R_BRACKET array_brackets_list_star

  98  method_body : SEMICOLON
  99              | L_BRACE declaration_or_statement_list_star catch_clause_list_star R_BRACE

 100  declaration_or_statement : declaration
 101                           | statement

 102  declaration_or_statement_list_star :
 103                                     | declaration_or_statement declaration_or_statement_list_star

 104  declaration : jimple_type local_name_list SEMICOLON

 105  catch_clause_list_star :
 106                         | catch_clause catch_clause_list_star

 107  jimple_type : UNKNOWN
 108              | nonvoid_type
 109              | NULL_TYPE

 110  local_name : name

 111  local_name_list : local_name
 112                  | local_name COMMA local_name_list

 113  case_stmt_list_plus : case_stmt
 114                      | case_stmt case_stmt_list_plus

 115  statement : label_name COLON
 116            | BREAKPOINT SEMICOLON
 117            | ENTERMONITOR immediate SEMICOLON
 118            | EXITMONITOR immediate SEMICOLON
 119            | TABLESWITCH L_PAREN immediate R_PAREN L_BRACE case_stmt_list_plus R_BRACE SEMICOLON
 120            | LOOKUPSWITCH L_PAREN immediate R_PAREN L_BRACE case_stmt_list_plus R_BRACE SEMICOLON
 121            | local_name COLON_EQUALS at_identifier SEMICOLON
 122            | local_name COLON_EQUALS at_identifier jtype SEMICOLON
 123            | variable EQUALS expression SEMICOLON
 124            | IF bool_expr goto_stmt
 125            | goto_stmt
 126            | NOP SEMICOLON
 127            | RET immediate_question_mark SEMICOLON
 128            | RETURN immediate_question_mark SEMICOLON
 129            | THROW immediate SEMICOLON
 130            | invoke_expr SEMICOLON

 131  immediate_question_mark : immediate
 132                          |

 133  label_name : identifier

 134  case_stmt : case_label COLON goto_stmt

 135  minus_question_mark : MINUS
 136                      |

 137  case_label : CASE minus_question_mark integer_constant
 138             | DEFAULT

 139  goto_stmt : GOTO label_name SEMICOLON

 140  catch_clause : CATCH class_name FROM label_name TO label_name WITH label_name SEMICOLON

 141  expression : new_expr
 142             | L_PAREN nonvoid_type R_PAREN immediate
 143             | immediate INSTANCEOF nonvoid_type
 144             | invoke_expr
 145             | reference
 146             | binop_expr
 147             | unop_expr
 148             | immediate

 149  new_expr : NEW base_type
 150           | NEWARRAY L_PAREN nonvoid_type R_PAREN fixed_array_descriptor
 151           | NEWMULTIARRAY L_PAREN base_type R_PAREN array_descriptor_list_plus

 152  array_descriptor_list_plus : array_descriptor
 153                             | array_descriptor array_descriptor_list_plus

 154  array_descriptor : L_BRACKET immediate_question_mark R_BRACKET

 155  variable : reference
 156           | local_name

 157  bool_expr : binop_expr
 158            | unop_expr

 159  arg_list_question_mark : arg_list
 160                         |

 161  invoke_expr : nonstatic_invoke local_name DOT method_signature L_PAREN arg_list_question_mark R_PAREN
 162              | STATICINVOKE method_signature L_PAREN arg_list_question_mark R_PAREN

 163  binop_expr : immediate binop immediate

 164  unop_expr : unop immediate

 165  nonstatic_invoke : SPECIALINVOKE
 166                   | VIRTUALINVOKE
 167                   | INTERFACEINVOKE

 168  parameter_list_question_mark : parameter_list
 169                               |

 170  parameter_args_opt_list_question_mark : parameter_list_args_opt
 171                                        |

 172  method_signature : CMPLT class_name COLON jtype name L_PAREN parameter_list_question_mark R_PAREN CMPGT

 173  method_signature_short : jtype name L_PAREN parameter_args_opt_list_question_mark R_PAREN

 174  reference : array_ref
 175            | field_ref

 176  array_ref : identifier fixed_array_descriptor

 177  field_ref : local_name DOT field_signature
 178            | field_signature

 179  field_signature : CMPLT class_name COLON jtype name CMPGT

 180  fixed_array_descriptor : L_BRACKET immediate R_BRACKET

 181  arg_list : immediate
 182           | immediate COMMA arg_list

 183  immediate : local_name
 184            | constant

 185  constant : minus_question_mark integer_constant
 186           | minus_question_mark integer_constant_long
 187           | minus_question_mark float_constant
 188           | string_constant
 189           | CLASS string_constant
 190           | NULL

 191  binop_no_mult : AND
 192                | OR
 193                | XOR
 194                | MOD
 195                | CMP
 196                | CMPG
 197                | CMPL
 198                | CMPEQ
 199                | CMPNE
 200                | CMPGT
 201                | CMPGE
 202                | CMPLT
 203                | CMPLE
 204                | SHL
 205                | SHR
 206                | USHR
 207                | PLUS
 208                | MINUS
 209                | DIV

 210  binop_val_no_multor : AND
 211                      | XOR
 212                      | MOD
 213                      | SHL
 214                      | SHR
 215                      | USHR
 216                      | PLUS
 217                      | MINUS
 218                      | DIV

 219  binop_val : OR
 220            | MULT
 221            | binop_val_no_multor

 222  binop_cmp : CMP
 223            | CMPG
 224            | CMPL
 225            | CMPEQ
 226            | CMPNE
 227            | CMPGT
 228            | CMPGE
 229            | CMPLT
 230            | CMPLE

 231  binop : binop_no_mult
 232        | MULT

 233  unop : LENGTHOF
 234       | NEG

 235  class_name : quoted_name
 236             | identifier
 237             | full_identifier

 238  name : quoted_name
 239       | identifier

 240  lvariable : at_identifier
 241            | identifier
 242            | QUESTIONMARK identifier

 243  lvariable_list_ne : lvariable
 244                    | lvariable COMMA lvariable_list_ne

 245  lvariable_list :
 246                 | lvariable_list_ne

 247  lvariable_npv : at_identifier
 248                | identifier

 249  lvariable_list_ne_npv : lvariable_npv
 250                        | lvariable_npv COMMA lvariable_list_ne_npv

 251  lvariable_list_npv :
 252                     | lvariable_list_ne_npv

 253  fldlist : identifier EQUALS jargument
 254          |
 255          | identifier EQUALS jargument SEMICOLON fldlist

 256  fldlist_npv : identifier EQUALS jargument_npv
 257              |
 258              | identifier EQUALS jargument_npv SEMICOLON fldlist_npv

 259  paramlist_question_mark : COMMA L_BRACE paramlist R_BRACE
 260                          | COMMA paramlist
 261                          |

 262  paramlist : identifier EQUALS lvariable
 263            |
 264            | identifier EQUALS lvariable SEMICOLON fldlist

 265  jargument_npv : RETURN
 266                | lvariable_npv
 267                | identifier L_PAREN jargument_list_npv R_PAREN
 268                | INTEGER_CONSTANT
 269                | MINUS INTEGER_CONSTANT
 270                | STRING_CONSTANT
 271                | field_signature
 272                | L_BRACE fldlist_npv R_BRACE
 273                | L_PAREN jargument_npv binop_val_no_multor jargument_npv R_PAREN

 274  jargument_list_ne_npv : jargument_npv
 275                        | jargument_npv COMMA jargument_list_ne_npv

 276  jargument_list_npv :
 277                     | jargument_list_ne_npv

 278  jargument : RETURN
 279            | lvariable
 280            | identifier L_PAREN jargument_list R_PAREN
 281            | INTEGER_CONSTANT
 282            | MINUS INTEGER_CONSTANT
 283            | STRING_CONSTANT
 284            | field_signature
 285            | L_BRACE fldlist R_BRACE
 286            | L_PAREN jargument binop_val_no_multor jargument R_PAREN

 287  jargument_list_ne : jargument
 288                    | jargument COMMA jargument_list_ne

 289  jargument_list :
 290                 | jargument_list_ne

 291  formula :
 292          | FALSE
 293          | GARBAGE
 294          | lvariable DOT jargument MAPSTO jargument
 295          | BANG identifier L_PAREN jargument_list R_PAREN
 296          | identifier L_PAREN jargument_list R_PAREN
 297          | full_identifier L_PAREN jargument_list R_PAREN
 298          | formula MULT formula
 299          | formula OR formula
 300          | formula OROR formula
 301          | lvariable COLON identifier
 302          | jargument binop_cmp jargument
 303          | jargument EQUALS jargument
 304          | L_PAREN formula R_PAREN

 305  formula_npv :
 306              | FALSE
 307              | GARBAGE
 308              | lvariable_npv DOT jargument_npv MAPSTO jargument_npv
 309              | BANG identifier L_PAREN jargument_list_npv R_PAREN
 310              | identifier L_PAREN jargument_list_npv R_PAREN
 311              | full_identifier L_PAREN jargument_list_npv R_PAREN
 312              | formula_npv MULT formula_npv
 313              | formula_npv OR formula_npv
 314              | formula_npv OROR formula_npv
 315              | lvariable_npv COLON identifier
 316              | jargument_npv binop_cmp jargument_npv
 317              | jargument_npv EQUALS jargument_npv
 318              | L_PAREN formula_npv R_PAREN

 319  spatial_at : jargument DOT field_signature MAPSTO jargument
 320             | identifier L_PAREN jargument_list R_PAREN
 321             | full_identifier L_PAREN jargument_list R_PAREN

 322  spatial_list_ne : spatial_at MULT spatial_list_ne
 323                  | spatial_at

 324  spatial_list : spatial_list_ne
 325               |

 326  sequent : spatial_list OR formula VDASH formula
 327          | spatial_list OROR formula VDASH formula

 328  sequent_list :
 329               | TRUE
 330               | sequent
 331               | sequent SEMICOLON sequent_list

 332  sequent_list_or_list : sequent_list
 333                       | sequent_list ORTEXT sequent_list_or_list

 334  identifier_op :
 335                | identifier

 336  without : WITHOUT formula
 337          | WITHOUT formula VDASH formula
 338          |

 339  without_simp : WITHOUT formula
 340               |

 341  varterm : lvariable_list

 342  clause : varterm NOTINCONTEXT
 343         | varterm NOTIN jargument

 344  clause_list : clause
 345              | clause SEMICOLON clause_list

 346  where : WHERE clause_list
 347        |

 348  ifclause :
 349           | IF formula

 350  equiv_rule : EQUIV identifier_op COLON formula WAND formula BIMP formula without_simp
 351             | EQUIV identifier_op COLON formula IMP formula BIMP formula without_simp
 352             | EQUIV identifier_op COLON formula IMP formula without_simp
 353             | EQUIV identifier_op COLON formula BIMP formula without_simp

 354  rule : IMPORT STRING_CONSTANT SEMICOLON
 355       | RULE identifier_op COLON sequent without where IF sequent_list_or_list
 356       | REWRITERULE identifier_op COLON identifier L_PAREN jargument_list R_PAREN EQUALS jargument ifclause without_simp where
 357       | REWRITERULE identifier_op MULT COLON identifier L_PAREN jargument_list R_PAREN EQUALS jargument ifclause without_simp where
 358       | ABSRULE identifier_op COLON formula LEADSTO formula where
 359       | equiv_rule

 360  rule_file : EOF
 361            | rule rule_file

 362  boolean : TRUE
 363          | FALSE

 364  question : IMPLICATION COLON formula_npv VDASH formula_npv
 365           | INCONSISTENCY COLON formula_npv
 366           | FRAME COLON formula_npv VDASH formula_npv
 367           | ABS COLON formula_npv

 368  test : IMPLICATION COLON formula_npv VDASH formula_npv QUESTIONMARK boolean
 369       | INCONSISTENCY COLON formula_npv QUESTIONMARK boolean
 370       | FRAME COLON formula_npv VDASH formula_npv QUESTIONMARK formula_npv
 371       | ABS COLON formula_npv QUESTIONMARK formula_npv

 372  question_file : EOF
 373                | question question_file

 374  test_file : EOF
 375            | test test_file

 376  ind_impl : formula VDASH identifier L_PAREN jargument_list R_PAREN

 377  ind_con : identifier COLON ind_impl

 378  ind_con_list :
 379               | ind_con
 380               | ind_con SEMICOLON ind_con_list

 381  inductive : IMPORT STRING_CONSTANT SEMICOLON
 382            | INDUCTIVE identifier L_PAREN jargument_list R_PAREN COLON ind_con_list

 383  inductive_file : EOF
 384                 | inductive inductive_file

 385  %entry% : '\001' file
 386          | '\002' spec_file
 387          | '\003' rule_file
 388          | '\004' question_file
 389          | '\005' test_file
 390          | '\006' inductive_file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	.  error

	%entry%  goto 7


state 1
	%entry% : '\001' . file  (385)
	modifier_list_star : .  (45)

	ABSTRACT  shift 8
	FINAL  shift 9
	NATIVE  shift 10
	PUBLIC  shift 11
	PROTECTED  shift 12
	PRIVATE  shift 13
	STATIC  shift 14
	SYNCHRONIZED  shift 15
	TRANSIENT  shift 16
	VOLATILE  shift 17
	STRICTFP  shift 18
	ENUM  shift 19
	ANNOTATION  shift 20
	CLASS  reduce 45
	INTERFACE  reduce 45

	file  goto 21
	modifier_list_star  goto 22
	modifier  goto 23


state 2
	%entry% : '\002' . spec_file  (386)

	CLASS  shift 24
	INTERFACE  shift 25
	EOF  shift 26
	IMPORT  shift 27
	.  error

	spec_file  goto 28
	file_type  goto 29
	classspec  goto 30


state 3
	%entry% : '\003' . rule_file  (387)

	ABSRULE  shift 31
	EQUIV  shift 32
	EOF  shift 33
	RULE  shift 34
	REWRITERULE  shift 35
	IMPORT  shift 36
	.  error

	rule_file  goto 37
	equiv_rule  goto 38
	rule  goto 39


state 4
	%entry% : '\004' . question_file  (388)

	EOF  shift 40
	IMPLICATION  shift 41
	FRAME  shift 42
	ABS  shift 43
	INCONSISTENCY  shift 44
	.  error

	question_file  goto 45
	question  goto 46


state 5
	%entry% : '\005' . test_file  (389)

	EOF  shift 47
	IMPLICATION  shift 48
	FRAME  shift 49
	ABS  shift 50
	INCONSISTENCY  shift 51
	.  error

	test_file  goto 52
	test  goto 53


state 6
	%entry% : '\006' . inductive_file  (390)

	EOF  shift 54
	IMPORT  shift 55
	INDUCTIVE  shift 56
	.  error

	inductive_file  goto 57
	inductive  goto 58


state 7
	$accept : %entry% . $end  (0)

	$end  accept


state 8
	modifier : ABSTRACT .  (23)

	.  reduce 23


state 9
	modifier : FINAL .  (24)

	.  reduce 24


state 10
	modifier : NATIVE .  (25)

	.  reduce 25


state 11
	modifier : PUBLIC .  (26)

	.  reduce 26


state 12
	modifier : PROTECTED .  (27)

	.  reduce 27


state 13
	modifier : PRIVATE .  (28)

	.  reduce 28


state 14
	modifier : STATIC .  (29)

	.  reduce 29


state 15
	modifier : SYNCHRONIZED .  (30)

	.  reduce 30


state 16
	modifier : TRANSIENT .  (31)

	.  reduce 31


state 17
	modifier : VOLATILE .  (32)

	.  reduce 32


state 18
	modifier : STRICTFP .  (33)

	.  reduce 33


state 19
	modifier : ENUM .  (34)

	.  reduce 34


state 20
	modifier : ANNOTATION .  (35)

	.  reduce 35


state 21
	%entry% : '\001' file .  (385)

	.  reduce 385


state 22
	file : modifier_list_star . file_type class_name extends_clause implements_clause file_body  (1)

	CLASS  shift 24
	INTERFACE  shift 25
	.  error

	file_type  goto 59


state 23
	modifier_list_star : modifier . modifier_list_star  (46)
	modifier_list_star : .  (45)

	ABSTRACT  shift 8
	FINAL  shift 9
	NATIVE  shift 10
	PUBLIC  shift 11
	PROTECTED  shift 12
	PRIVATE  shift 13
	STATIC  shift 14
	SYNCHRONIZED  shift 15
	TRANSIENT  shift 16
	VOLATILE  shift 17
	STRICTFP  shift 18
	ENUM  shift 19
	ANNOTATION  shift 20
	AS  reduce 45
	CLASS  reduce 45
	INTERFACE  reduce 45
	VOID  reduce 45
	BOOLEAN  reduce 45
	BYTE  reduce 45
	SHORT  reduce 45
	CHAR  reduce 45
	INT  reduce 45
	LONG  reduce 45
	FLOAT  reduce 45
	DOUBLE  reduce 45
	NULL  reduce 45
	QUOTED_NAME  reduce 45
	IDENTIFIER  reduce 45
	FULL_IDENTIFIER  reduce 45
	FALSE  reduce 45
	TRUE  reduce 45
	GARBAGE  reduce 45

	modifier_list_star  goto 60
	modifier  goto 23


state 24
	file_type : CLASS .  (36)

	.  reduce 36


state 25
	file_type : INTERFACE .  (37)

	.  reduce 37


state 26
	spec_file : EOF .  (2)

	.  reduce 2


state 27
	spec_file : IMPORT . STRING_CONSTANT SEMICOLON spec_file  (3)

	STRING_CONSTANT  shift 61
	.  error


state 28
	%entry% : '\002' spec_file .  (386)

	.  reduce 386


state 29
	classspec : file_type . class_name L_BRACE apf_defines methods_specs R_BRACE  (5)

	AS  shift 62
	QUOTED_NAME  shift 63
	IDENTIFIER  shift 64
	FULL_IDENTIFIER  shift 65
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	.  error

	class_name  goto 69
	identifier  goto 70
	quoted_name  goto 71
	full_identifier  goto 72


state 30
	spec_file : classspec . spec_file  (4)

	CLASS  shift 24
	INTERFACE  shift 25
	EOF  shift 26
	IMPORT  shift 27
	.  error

	spec_file  goto 73
	file_type  goto 29
	classspec  goto 30


state 31
	rule : ABSRULE . identifier_op COLON formula LEADSTO formula where  (358)
	identifier_op : .  (334)

	AS  shift 62
	IDENTIFIER  shift 64
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	COLON  reduce 334

	identifier  goto 74
	identifier_op  goto 75


state 32
	equiv_rule : EQUIV . identifier_op COLON formula WAND formula BIMP formula without_simp  (350)
	equiv_rule : EQUIV . identifier_op COLON formula IMP formula BIMP formula without_simp  (351)
	equiv_rule : EQUIV . identifier_op COLON formula IMP formula without_simp  (352)
	equiv_rule : EQUIV . identifier_op COLON formula BIMP formula without_simp  (353)
	identifier_op : .  (334)

	AS  shift 62
	IDENTIFIER  shift 64
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	COLON  reduce 334

	identifier  goto 74
	identifier_op  goto 76


state 33
	rule_file : EOF .  (360)

	.  reduce 360


state 34
	rule : RULE . identifier_op COLON sequent without where IF sequent_list_or_list  (355)
	identifier_op : .  (334)

	AS  shift 62
	IDENTIFIER  shift 64
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	COLON  reduce 334

	identifier  goto 74
	identifier_op  goto 77


state 35
	rule : REWRITERULE . identifier_op COLON identifier L_PAREN jargument_list R_PAREN EQUALS jargument ifclause without_simp where  (356)
	rule : REWRITERULE . identifier_op MULT COLON identifier L_PAREN jargument_list R_PAREN EQUALS jargument ifclause without_simp where  (357)
	identifier_op : .  (334)

	AS  shift 62
	IDENTIFIER  shift 64
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	COLON  reduce 334
	MULT  reduce 334

	identifier  goto 74
	identifier_op  goto 78


state 36
	rule : IMPORT . STRING_CONSTANT SEMICOLON  (354)

	STRING_CONSTANT  shift 79
	.  error


state 37
	%entry% : '\003' rule_file .  (387)

	.  reduce 387


state 38
	rule : equiv_rule .  (359)

	.  reduce 359


state 39
	rule_file : rule . rule_file  (361)

	ABSRULE  shift 31
	EQUIV  shift 32
	EOF  shift 33
	RULE  shift 34
	REWRITERULE  shift 35
	IMPORT  shift 36
	.  error

	rule_file  goto 80
	equiv_rule  goto 38
	rule  goto 39


state 40
	question_file : EOF .  (372)

	.  reduce 372


state 41
	question : IMPLICATION . COLON formula_npv VDASH formula_npv  (364)

	COLON  shift 81
	.  error


state 42
	question : FRAME . COLON formula_npv VDASH formula_npv  (366)

	COLON  shift 82
	.  error


state 43
	question : ABS . COLON formula_npv  (367)

	COLON  shift 83
	.  error


state 44
	question : INCONSISTENCY . COLON formula_npv  (365)

	COLON  shift 84
	.  error


state 45
	%entry% : '\004' question_file .  (388)

	.  reduce 388


state 46
	question_file : question . question_file  (373)

	EOF  shift 40
	IMPLICATION  shift 41
	FRAME  shift 42
	ABS  shift 43
	INCONSISTENCY  shift 44
	.  error

	question_file  goto 85
	question  goto 46


state 47
	test_file : EOF .  (374)

	.  reduce 374


state 48
	test : IMPLICATION . COLON formula_npv VDASH formula_npv QUESTIONMARK boolean  (368)

	COLON  shift 86
	.  error


state 49
	test : FRAME . COLON formula_npv VDASH formula_npv QUESTIONMARK formula_npv  (370)

	COLON  shift 87
	.  error


state 50
	test : ABS . COLON formula_npv QUESTIONMARK formula_npv  (371)

	COLON  shift 88
	.  error


state 51
	test : INCONSISTENCY . COLON formula_npv QUESTIONMARK boolean  (369)

	COLON  shift 89
	.  error


state 52
	%entry% : '\005' test_file .  (389)

	.  reduce 389


state 53
	test_file : test . test_file  (375)

	EOF  shift 47
	IMPLICATION  shift 48
	FRAME  shift 49
	ABS  shift 50
	INCONSISTENCY  shift 51
	.  error

	test_file  goto 90
	test  goto 53


state 54
	inductive_file : EOF .  (383)

	.  reduce 383


state 55
	inductive : IMPORT . STRING_CONSTANT SEMICOLON  (381)

	STRING_CONSTANT  shift 91
	.  error


state 56
	inductive : INDUCTIVE . identifier L_PAREN jargument_list R_PAREN COLON ind_con_list  (382)

	AS  shift 62
	IDENTIFIER  shift 64
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	.  error

	identifier  goto 92


state 57
	%entry% : '\006' inductive_file .  (390)

	.  reduce 390


state 58
	inductive_file : inductive . inductive_file  (384)

	EOF  shift 54
	IMPORT  shift 55
	INDUCTIVE  shift 56
	.  error

	inductive_file  goto 93
	inductive  goto 58


state 59
	file : modifier_list_star file_type . class_name extends_clause implements_clause file_body  (1)

	AS  shift 62
	QUOTED_NAME  shift 63
	IDENTIFIER  shift 64
	FULL_IDENTIFIER  shift 65
	FALSE  shift 66
	TRUE  shift 67
	GARBAGE  shift 68
	.  error

	class_name  goto 94
	identifier  goto 70
	quoted_name  goto 71
	full_identifier  goto 72


state 60
	modifier_list_star : modifier modifier_list_star .  (46)

	.  reduce 46


state 61
	spec_file : IMPORT STRING_CONSTANT . SEMICOLON spec_file  (3)

	SEMICOLON  shift 95
	.  error


state 62
	identifier : AS .  (85)

	.  reduce 85


state 63
	quoted_name : QUOTED_NAME .  (84)

	.  reduce 84


state 64
	identifier : IDENTIFIER .  (86)

	.  reduce 86


state 65
	full_identifier : FULL_IDENTIFIER .  (91)

	.  reduce 91


state 66
	identifier : FALSE .  (87)

	.  reduce 87


state 67
	identifier : TRUE .  (88)

	.  reduce 88


state 68
	identifier : GARBAGE .  (89)

	.  reduce 89


state 69
	classspec : file_type class_name . L_BRACE apf_defines methods_specs R_BRACE  (5)

	L_BRACE  shift 96
	.  error


state 70
	class_name : identifier .  (236)

	.  reduce 236


state 71
	class_name : quoted_name .  (235)

	.  reduce 235


state 72
	class_name : full_identifier .  (237)

	.  reduce 237


state 73
	spec_file : classspec spec_file .  (4)

	.  reduce 4


state 74
	identifier_op : identifier .  (335)

	.  reduce 335


state 75
	rule : ABSRULE identifier_op . COLON formula LEADSTO formula where  (358)

	COLON  shift 97
	.  error


state 76
	equiv_rule : EQUIV identifier_op . COLON formula WAND formula BIMP formula without_simp  (350)
	equiv_rule : EQUIV identifier_op . COLON formula IMP formula BIMP formula without_simp  (351)
	equiv_rule : EQUIV identifier_op . COLON formula IMP formula without_simp  (352)
	equiv_rule : EQUIV identifier_op . COLON formula BIMP formula without_simp  (353)

	COLON  shift 98
	.  error


state 77
	rule : RULE identifier_op . COLON sequent without where IF sequent_list_or_list  (355)

	COLON  shift 99
	.  error


state 78
	rule : REWRITERULE identifier_op . COLON identifier L_PAREN jargument_list R_PAREN EQUALS jargument ifclause without_simp where  (356)
	rule : REWRITERULE identifier_op . MULT COLON identifier L_PAREN jargument_list R_PAREN EQUALS jargument ifclause without_simp where  (357)

	COLON  shift 100
	MULT  shift 101
	.  error


state 79
	rule : IMPORT STRING_CONSTANT . SEMICOLON  (354)

	SEMICOLON  shift 102
	.  error


state 80
	rule_file : rule rule_file .  (361)

	.  reduce 361


state 81
	question : IMPLICATION COLON . formula_npv VDASH formula_npv  (364)
	formula_npv : .  (305)

	AS  shift 62
	BANG  shift 103
	RETURN  shift 104
	L_BRACE  shift 105
	L_PAREN  shift 106
	INTEGER_CONSTANT  shift 107
	STRING_CONSTANT  shift 108
	IDENTIFIER  shift 64
	AT_IDENTIFIER  shift 109
	FULL_IDENTIFIER  shift 65
	CMPLT  shift 110
	MINUS  shift 111
	FALSE  shift 112
	TRUE  shift 67
	GARBAGE  shift 113
	OR  reduce 305
	OROR  reduce 305
	VDASH  reduce 305
	MULT  reduce 305

	identifier  goto 114
	at_identifier  goto 115
	full_identifier  goto 116
	field_signature  goto 117
	lvariable_npv  goto 118
	jargument_npv  goto 119
	formula_npv  goto 120


state 82
	question : FRAME COLON . formula_npv VDASH formula_npv  (366)
	formula_npv : .  (305)

	AS  shift 62
	BANG  shift 103
	RETURN  shift 104
	L_BRACE  shift 105
	L_PAREN  shift 106
	INTEGER_CONSTANT  shift 107
	STRING_CONSTANT  shift 108
	IDENTIFIER  shift 64
	AT_IDENTIFIER  shift 109
	FULL_IDENTIFIER  shift 65
	CMPLT  shift 110
	MINUS  shift 111
	FALSE  shift 112
	TRUE  shift 67
	GARBAGE  shift 113
	OR  reduce 305
	OROR  reduce 305
	VDASH  reduce 305
	MULT  reduce 305

	identifier  goto 114
	at_identifier  goto 115
	full_identifier  goto 116
	field_signature  goto 117
	lvariable_npv  goto 118
	jargument_npv  goto 119
	formula_npv  goto 121


state 83
	question : ABS COLON . formula_npv  (367)
	formula_npv : .  (305)
